test commit for git workflow

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "generator-mongoose",
   "version": "1.0.3",
-  "description": "A mongoose schema generator for Yeoman",
+  "description": "sdlksjdflksdjflskdjfsldfjsdlfjklk",
   "keywords": [
     "yo",
     "yeoman",
