test commit again 2

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "generator-mongoose",
+  "name": "SOMETHING-FOR_TEST",
   "version": "1.0.3",
   "description": "sdlksjdflksdjflskdjfsldfjsdlfjklk",
   "keywords": [
